# cookbook

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  quickstart.sh  requirements-dev.txt  requirements.txt  screenshots.yml  setup.cfg  wsgi.py
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml  deploy.yml  lint.yml  tests.yml
.secrets/: POSTGRES_PASSWORD.example
app/: __init__.py  config.py  extensions.py  storage.py
app/book/: __init__.py  routes.py
app/conversions/: weight_conversions.py
app/images/: __init__.py  routes.py
app/ingredients/: __init__.py  routes.py
app/models/: ingredient.py  recipe.py  recipeingredient.py  user.py
app/recipes/: __init__.py  models.py  routes.py  schemas.py
app/schemas/: ingredient.py  recipeingredient.py  recipes.py
app/tags/: __init__.py  models.py  routes.py  schemas.py
app/templates/: base.html  bookview.html  new_recipe.html  pagination.html  random.j2  recipes.html
migrations/versions/: 024dbc455b6b_.py  03ffea81ea23_.py  11e37781f331_.py  231dc6c3f09c_.py  2635a1d858b8_removed_primary_key_from_list.py  36f5421ec29d_.py  850981e700c2_initial_migration.py  9ffa7f847894_added_number_and_image_stuff.py  a6a95ac4141a_.py  c7ec534265ff_tag_system.py  e4330a8080ff_.py
scripts/: build_scss_hook.sh  quickstart.sh  take_screenshots.py  take_screenshots_hook.sh
tests/: conftest.py  test_book_routes.py  test_extensions.py  test_images.py  test_ingredient_routes.py  test_models.py  test_playwright_smoke.py  test_recipe_creation.py  test_recipe_routes.py  test_routes.py  test_schemas.py  test_screenshot_config.py  test_storage.py
tests/test_models/: test_ingredient_model.py  (+3 more)
(+8 files in other folders)
