[project]
name = "cookbook"
version = "0.1.0"
description = "Self-hosted recipe management website"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "venv",
    "migrations",
    "node_modules",
    "__pycache__",
    ".pytest_cache",
    "htmlcov",
    "dist",
    "build",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
